version/0.31/_sources/api/meshing/datamodel/meshing_utilities/meshing_utilities_contents.rst.txt
.. _ref_meshing_datamodel_meshing_utilities:

meshing.datamodel.meshing_utilities
===================================

.. autoclass:: ansys.fluent.core.generated.datamodel_251.meshing_utilities.Root
   :members: _cell_zones_labels_fdl, _cell_zones_str_fdl, _edge_zones_labels_fdl, _edge_zones_str_fdl, _face_zones_labels_fdl, _face_zones_str_fdl, _node_zones_labels_fdl, _node_zones_str_fdl, _object_names_str_fdl, _prism_cell_zones_labels_fdl, _prism_cell_zones_str_fdl, _regions_str_fdl, _zone_types_fdl, boundary_zone_exists, cell_zone_exists, convert_zone_ids_to_name_strings, convert_zone_name_strings_to_ids, copy_face_zone_labels, count_marked_faces, create_boi_and_size_functions_from_refinement_regions, dump_face_zone_orientation_in_region, fill_holes_in_face_zone_list, get_adjacent_cell_zones_for_given_face_zones, get_adjacent_face_zones_for_given_cell_zones, get_adjacent_interior_and_boundary_face_zones_for_given_cell_zones, get_adjacent_zones_by_edge_connectivity, get_adjacent_zones_by_node_connectivity, get_all_objects, get_average_bounding_box_center, get_baffles_for_face_zones, get_bounding_box_of_zone_list, get_cell_mesh_distribution, get_cell_quality_limits, get_cell_zone_count, get_cell_zone_id_list_with_labels, get_cell_zone_shape, get_cell_zone_volume, get_cell_zones, get_edge_size_limits, get_edge_zone_id_list_with_labels, get_edge_zones, get_edge_zones_list, get_edge_zones_of_object, get_embedded_baffles, get_face_mesh_distribution, get_face_quality_limits, get_face_zone_area, get_face_zone_count, get_face_zone_id_list_with_labels, get_face_zone_node_count, get_face_zones, get_face_zones_by_zone_area, get_face_zones_of_object, get_face_zones_with_zone_specific_prisms_applied, get_free_faces_count, get_interior_face_zones_for_given_cell_zones, get_labels, get_labels_on_cell_zones, get_labels_on_edge_zones, get_labels_on_face_zones, get_labels_on_face_zones_list, get_maxsize_cell_zone_by_count, get_maxsize_cell_zone_by_volume, get_minsize_face_zone_by_area, get_minsize_face_zone_by_count, get_multi_faces_count, get_node_zones, get_objects, get_overlapping_face_zones, get_pairs_of_overlapping_face_zones, get_prism_cell_zones, get_region_volume, get_regions, get_regions_of_face_zones, get_shared_boundary_face_zones_for_given_cell_zones, get_tet_cell_zones, get_unreferenced_cell_zones, get_unreferenced_edge_zones, get_unreferenced_face_zones, get_wrapped_face_zones, get_zone_type, get_zones, get_zones_with_free_faces_for_given_face_zones, get_zones_with_marked_faces_for_given_face_zones, get_zones_with_multi_faces_for_given_face_zones, interior_zone_exists, mark_bad_quality_faces, mark_duplicate_faces, mark_face_strips_by_height_and_quality, mark_faces_by_quality, mark_faces_deviating_from_size_field, mark_faces_in_self_proximity, mark_faces_using_node_degree, mark_free_faces, mark_invalid_normals, mark_island_faces, mark_multi_faces, mark_point_contacts, mark_self_intersecting_faces, mark_sliver_faces, mark_spikes, mark_steps, mesh_check, mesh_exists, print_worst_quality_cell, project_zone_on_plane, refine_marked_faces_in_zones, scale_cell_zones_around_pivot, scale_face_zones_around_pivot, separate_cell_zone_layers_by_face_zone_using_id, separate_cell_zone_layers_by_face_zone_using_name, separate_face_zones_by_cell_neighbor, unpreserve_cell_zones
   :show-inheritance:
   :undoc-members:
   :exclude-members: __weakref__, __dict__
   :special-members: __init__
   :autosummary:
   :autosummary-members:

.. toctree::
   :hidden:

   add_labels_on_cell_zones/add_labels_on_cell_zones_contents
   add_labels_on_edge_zones/add_labels_on_edge_zones_contents
   add_labels_on_face_zones/add_labels_on_face_zones_contents
   clean_face_zone_names/clean_face_zone_names_contents
   delete_all_sub_domains/delete_all_sub_domains_contents
   delete_empty_cell_zones/delete_empty_cell_zones_contents
   delete_empty_edge_zones/delete_empty_edge_zones_contents
   delete_empty_face_zones/delete_empty_face_zones_contents
   delete_empty_zones/delete_empty_zones_contents
   delete_marked_faces_in_zones/delete_marked_faces_in_zones_contents
   merge_cell_zones/merge_cell_zones_contents
   merge_cell_zones_with_same_prefix/merge_cell_zones_with_same_prefix_contents
   merge_cell_zones_with_same_suffix/merge_cell_zones_with_same_suffix_contents
   merge_face_zones/merge_face_zones_contents
   merge_face_zones_of_type/merge_face_zones_of_type_contents
   merge_face_zones_with_same_prefix/merge_face_zones_with_same_prefix_contents
   remove_id_suffix_from_face_zones/remove_id_suffix_from_face_zones_contents
   remove_ids_from_zone_names/remove_ids_from_zone_names_contents
   remove_labels_on_cell_zones/remove_labels_on_cell_zones_contents
   remove_labels_on_edge_zones/remove_labels_on_edge_zones_contents
   remove_labels_on_face_zones/remove_labels_on_face_zones_contents
   rename_edge_zone/rename_edge_zone_contents
   rename_face_zone/rename_face_zone_contents
   rename_face_zone_label/rename_face_zone_label_contents
   rename_object/rename_object_contents
   renumber_zone_ids/renumber_zone_ids_contents
   replace_cell_zone_suffix/replace_cell_zone_suffix_contents
   replace_edge_zone_suffix/replace_edge_zone_suffix_contents
   replace_face_zone_suffix/replace_face_zone_suffix_contents
   replace_label_suffix/replace_label_suffix_contents
   replace_object_suffix/replace_object_suffix_contents
   set_number_of_parallel_compute_threads/set_number_of_parallel_compute_threads_contents
   set_object_cell_zone_type/set_object_cell_zone_type_contents
   set_quality_measure/set_quality_measure_contents
